Text highlighting disabled
Clicking quickly was highlighting the text which was annoying. Use .noselect for any elements that shouldn't be selectable. Currently on body

--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,12 @@ textarea {
   height: 100vh;
   position: absolute; }
 
+.noselect {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
