--- a/css/_clickity.scss
+++ b/css/_clickity.scss
@@ -3,3 +3,10 @@
   height: 100vh;
   position: absolute;
 }
+
+.noselect {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
