--- a/css/main.css
+++ b/css/main.css
@@ -85,13 +85,30 @@ textarea {
 #canvas {
   width: 100%;
   height: 100vh;
-  position: absolute; }
+  position: absolute;
+  z-index: 100; }
 
 .noselect {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none; }
+
+#content {
+  width: 40%;
+  height: 40%;
+  margin: auto;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; }
+
+#count {
+  font-size: 200pt;
+  color: rgba(90, 90, 90, 0.52);
+  line-height: normal; }
 
 /* ==========================================================================
    Helper classes
