--- a/css/main.css
+++ b/css/main.css
@@ -82,11 +82,27 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+.container {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+  position: relative; }
+
+.container:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; }
+
 #canvas {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: absolute;
-  z-index: 100; }
+  top: 0;
+  left: 0;
+  z-index: 99; }
 
 .noselect {
   -webkit-user-select: none;
@@ -95,20 +111,34 @@ textarea {
   user-select: none; }
 
 #content {
-  width: 40%;
-  height: 40%;
   margin: auto;
   text-align: center;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0; }
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  z-index: 50;
+  background: #ffffff;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  border: none;
+  -webkit-border-radius: 37px;
+  border-radius: 37px;
+  font: normal 16px/1 "Times New Roman", Times, serif;
+  color: black;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  -webkit-box-shadow: 0 0 26px 15px white;
+  box-shadow: 0 0 26px 15px white; }
 
 #count {
-  font-size: 200pt;
-  color: rgba(90, 90, 90, 0.52);
-  line-height: normal; }
+  color: rgba(135, 135, 135, 0.49);
+  z-index: 1;
+  display: inline-block;
+  line-height: 100vh;
+  position: absolute;
+  left: 0;
+  right: 0; }
 
 /* ==========================================================================
    Helper classes
