--- a/css/_clickity.scss
+++ b/css/_clickity.scss
@@ -1,3 +1,15 @@
+* {
+  font-family: Roboto-Regular;
+}
+
+h1 {
+  font-size: 30pt;
+}
+
+span {
+  font-size: 20pt;
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -20,7 +32,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 49;
 }
 
 .noselect {
@@ -40,8 +52,6 @@
   z-index: 50;
 
   background:#ffffff;
-
-
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -54,6 +64,12 @@
   text-overflow: ellipsis;
   -webkit-box-shadow: 0 0 26px 15px white ;
   box-shadow: 0 0 26px 15px white ;
+
+  span {
+    cursor: pointer;
+    position: relative;
+    z-index: 100;
+  }
 }
 
 #count {
