--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,21 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+@font-face {
+  font-family: 'Roboto-Thin';
+  src: url("../font/Roboto-Thin.ttf"); }
+@font-face {
+  font-family: 'Roboto-Regular';
+  src: url("../font/Roboto-Regular.ttf"); }
+* {
+  font-family: Roboto-Regular; }
+
+h1 {
+  font-size: 30pt; }
+
+span {
+  font-size: 20pt; }
+
 .container {
   width: 100%;
   height: 100%;
@@ -102,7 +117,7 @@ textarea {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 99; }
+  z-index: 49; }
 
 .noselect {
   -webkit-user-select: none;
@@ -130,6 +145,10 @@ textarea {
   text-overflow: ellipsis;
   -webkit-box-shadow: 0 0 26px 15px white;
   box-shadow: 0 0 26px 15px white; }
+  #content span {
+    cursor: pointer;
+    position: relative;
+    z-index: 100; }
 
 #count {
   color: rgba(135, 135, 135, 0.49);
