--- a/css/main.scss
+++ b/css/main.scss
@@ -102,6 +102,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+@import "fonts";
 @import 'clickity';
 
 
