--- a/css/main.css
+++ b/css/main.css
@@ -131,20 +131,7 @@ span {
   display: inline-block;
   vertical-align: middle;
   position: relative;
-  z-index: 50;
-  background: #ffffff;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  border: none;
-  -webkit-border-radius: 37px;
-  border-radius: 37px;
-  font: normal 16px/1 "Times New Roman", Times, serif;
-  color: black;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  -webkit-box-shadow: 0 0 26px 15px white;
-  box-shadow: 0 0 26px 15px white; }
+  z-index: 50; }
   #content span {
     cursor: pointer;
     position: relative;
@@ -158,6 +145,32 @@ span {
   position: absolute;
   left: 0;
   right: 0; }
+
+#finish {
+  margin: auto;
+  text-align: center;
+  vertical-align: middle;
+  position: relative;
+  z-index: 50;
+  top: 60vh;
+  display: none; }
+  #finish #again {
+    cursor: pointer; }
+
+.overlay {
+  background: #ffffff;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  border: none;
+  -webkit-border-radius: 37px;
+  border-radius: 37px;
+  font: normal 16px/1 "Times New Roman", Times, serif;
+  color: black;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  -webkit-box-shadow: 0 0 26px 15px white;
+  box-shadow: 0 0 26px 15px white; }
 
 /* ==========================================================================
    Helper classes
