--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -181,7 +181,7 @@ textarea {
 }
 
 /*
- * Hide visually and from screenreaders, but maintain layout
+ * Hide visually and from screenreaders, but maintain layouts
  */
 
 .invisible {
