--- a/public/css/_clickity.scss
+++ b/public/css/_clickity.scss
@@ -6,10 +6,6 @@ h1 {
   font-size: 30pt;
 }
 
-span {
-  font-size: 20pt;
-}
-
 .container {
   width: 100%;
   height: 100%;
@@ -51,12 +47,10 @@ span {
   position: relative;
   z-index: 50;
 
-
-
-  span {
-    cursor: pointer;
+  div {
     position: relative;
     z-index: 100;
+    font-size: 20pt;
   }
 }
 
@@ -80,9 +74,15 @@ span {
   top: 60vh;
   display: none;
 
-  #again {
-    cursor: pointer;
+  div {
+    position: relative;
+    z-index: 100;
+    font-size: 20pt;
   }
+}
+
+.clickable {
+  cursor: pointer;
 }
 
 .overlay {
