--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,7 +89,7 @@ textarea {
   font-family: 'Roboto-Regular';
   src: url("../font/Roboto-Regular.ttf"); }
 * {
-  font-family: Roboto-Regular; }
+  font-family: Roboto-Thin; }
 
 h1 {
   font-size: 30pt; }
@@ -129,10 +129,13 @@ h1 {
   vertical-align: middle;
   position: relative;
   z-index: 50; }
-  #content div {
+  #content a, #content div {
     position: relative;
     z-index: 100;
-    font-size: 20pt; }
+    font-size: 20pt;
+    text-decoration: none;
+    color: black;
+    display: block; }
 
 #count {
   color: rgba(135, 135, 135, 0.49);
@@ -151,10 +154,13 @@ h1 {
   z-index: 50;
   top: 60vh;
   display: none; }
-  #finish div {
+  #finish a, #finish div {
     position: relative;
     z-index: 100;
-    font-size: 20pt; }
+    font-size: 20pt;
+    text-decoration: none;
+    color: black;
+    display: block; }
 
 .clickable {
   cursor: pointer; }
@@ -173,6 +179,36 @@ h1 {
   text-overflow: ellipsis;
   -webkit-box-shadow: 0 0 26px 15px white;
   box-shadow: 0 0 26px 15px white; }
+
+.form-container {
+  height: 100%;
+  width: 100%; }
+
+.form-content {
+  width: 40%;
+  margin: auto;
+  text-align: center;
+  padding-top: 90px; }
+  .form-content input {
+    text-align: center;
+    display: block;
+    clear: both;
+    width: 50%;
+    min-width: 190px;
+    height: 50px;
+    border-radius: 3px;
+    outline: none;
+    margin: 0 auto 18px auto;
+    border: 1px #c1c1c1 solid; }
+  .form-content input[type=submit] {
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    background-color: #3686bb;
+    -webkit-transition: background-color 0.5s, -webkit-transform 0.5s;
+    transition: background-color 0.5s, transfrom 0.5s; }
+  .form-content input:hover[type=submit] {
+    background-color: #2b6a93; }
 
 /* ==========================================================================
    Helper classes
