--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -102,8 +102,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-@import "fonts";
+@import 'fonts';
 @import 'clickity';
+@import 'users';
 
 
 
