--- a/public/css/_clickity.scss
+++ b/public/css/_clickity.scss
@@ -9,19 +9,7 @@ h1 {
 }
 
 .container {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-}
-
-.container:before {
-  content: '';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-  margin-right: -0.25em;
+//  text-align: center;
 }
 
 #canvas {
@@ -111,5 +99,18 @@ h1 {
 }
 
 #save-game {
-//  display: none;
+  display: none;
+}
+
+.vertical-center {
+  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+#menu {
+//  width: 100vh;
+  background-color: #204d74;
+//  height: 200px;
 }
