--- a/public/css/_clickity.scss
+++ b/public/css/_clickity.scss
@@ -12,17 +12,13 @@ body {
   overflow: hidden;
 }
 
-.container {
-//  text-align: center;
-}
-
 #canvas {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 49;
+  z-index: 100;
 }
 
 .noselect {
@@ -59,12 +55,10 @@ body {
   transition: all .5s ease;
 
   div {
-//    display: none;
     text-align: center;
   }
-
 }
 
-body:hover #menu {
-  height: 100vh;
+#click-counter {
+  font-size: 50vmin;
 }
