Timer countdown kinda working
Does't rotate correctly

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,6 +63,9 @@ body {
   #menu div {
     text-align: center; }
 
+.preface {
+  font-size: 50vmin; }
+
 #click-counter {
   font-size: 50vmin; }
 
