--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,8 +61,9 @@ body {
   -o-transition: all .5s ease;
   transition: all .5s ease; }
   #menu div {
-    text-align: center;
-    margin-top: 100px; }
+    text-align: center; }
+  #menu input {
+    margin: 5px 0; }
 
 .preface {
   font-size: 50vmin; }
