--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,9 @@
 h1 {
   font-size: 30pt; }
 
+.header-title {
+  font-size: 15vmin; }
+
 body {
   overflow: hidden; }
 
@@ -64,6 +67,9 @@ body {
     text-align: center; }
   #menu input {
     margin: 5px 0; }
+  #menu .menu-block {
+    margin: 5px;
+    height: 300px; }
 
 .preface {
   font-size: 50vmin; }
